07_Project/Application/old/main.bicep
// ------------------------------  Vars  -----------------------------------------------
targetScope = 'subscription'

// definieer parameters
@description('vars main.parameter.json')
param environment string
param location string

param vnetName array
param vnetPrefix array
param subnetName array
//param subnets array

// ---------------------------- Maak RG  ------------------------------------------

resource resourceGroup 'Microsoft.Resources/resourceGroups@2021-04-01' = {
  name: 'RG-XYZ-${environment}-${location}-${uniqueString(subscription().subscriptionId)}'
  location: location
}
// -------------------------  Maak Storage Account ----------------------------------------

// module storageDpl 'storage.bicep' ={
//   scope: resourceGroup
//   name: 'XYZstorageAcc-${environment}'
//   params:{
//     location: location
//     storagePrefix:location
  
//   }
// }

// -------------------------  Maak KeyVault ----------------------------------------

// ---------------------------- Maak een VNET aan -----------------------------------------
// iterative deployment
// @batchSize(int) // optional decorator for serial deployment
// module <symbolic-name> '<path-to-file>' = [for <item> in <collection>: {
//   name: '<linked-deployment-name>'
//   params: {
//     <parameter-names-and-values>
//   }
// dependsOn: [
//   <symbolic-names-to-deploy-before-this-item>
// ]
// }]

module vnetDply1 'vnet.bicep' = {
  name: vnetName[0]
  scope:resourceGroup
  params: {
    location: location
    //subnets: subnets[0]
    vnetName: vnetName[0]
    vnetPrefix: vnetPrefix[0]
    subnetName: subnetName[0]
  }
}






// @description('Unique DNS Name for the Storage Account where the Virtual Machine\'s disks will be placed.')
// param newStorageAccountName string

// @description('User name for the Virtual Machine.')
// param adminUsername string

// @description('Unique DNS Name for the Public IP used to access the Virtual Machine.')
// param dnsNameForPublicIP string

// @allowed([
//   '20.04-LTS'
//   '18.04-LTS'
//   '16.04.0-LTS'
//   '14.04.5-LTS'
// ])
// @description('The Ubuntu version for the VM. This will pick a fully patched image of this given Ubuntu version. Allowed values: 18.04-LTS, 16.04.0-LTS, 14.04.5-LTS.')
// param ubuntuOSVersion string = '20.04-LTS'

// @description('Size of the virtual machine')
// param vmSize string = 'Standard_B1'

// @description('Location for all resources.')
// param location string = resourceGroup().location

// @allowed([
//   'sshPublicKey'
//   'password'
// ])
// @description('Type of authentication to use on the Virtual Machine. SSH key is recommended.')
// param authenticationType string = 'password'

// @description('SSH Key or password for the Virtual Machine. SSH key is recommended.')
// @secure()
// param adminPasswordOrKey string

// var imagePublisher = 'Canonical'
// var imageOffer = 'UbuntuServer'
// var nicName_var = 'myVMNic'
// var addressPrefix = '10.0.0.0/16'
// var subnetName = 'Subnet'
// var subnetPrefix = '10.0.0.0/24'
// var publicIPAddressName_var = 'myPublicIP'
// var publicIPAddressType = 'Dynamic'
// var vmName_var = 'MyUbuntuVM'
// var virtualNetworkName_var = 'MyVNET'
// var subnetRef = resourceId('Microsoft.Network/virtualNetworks/subnets', virtualNetworkName_var, subnetName)
// var linuxConfiguration = {
//   disablePasswordAuthentication: true
//   ssh: {
//     publicKeys: [
//       {
//         path: '/home/${adminUsername}/.ssh/authorized_keys'
//         keyData: adminPasswordOrKey
//       }
//     ]
//   }
// }
// var networkSecurityGroupName_var = 'default-NSG'

// resource newStorageAccountName_resource 'Microsoft.Storage/storageAccounts@2021-01-01' = {
//   name: newStorageAccountName
//   location: location
//   sku: {
//     name: 'Standard_LRS'
//   }
//   kind: 'StorageV2'
// }

// resource publicIPAddressName 'Microsoft.Network/publicIPAddresses@2020-05-01' = {
//   name: publicIPAddressName_var
//   location: location
//   properties: {
//     publicIPAllocationMethod: publicIPAddressType
//     dnsSettings: {
//       domainNameLabel: dnsNameForPublicIP
//     }
//   }
// }

// resource networkSecurityGroupName 'Microsoft.Network/networkSecurityGroups@2020-05-01' = {
//   name: networkSecurityGroupName_var
//   location: location
//   properties: {
//     securityRules: [
//       {
//         name: 'default-allow-22'
//         properties: {
//           priority: 1000
//           access: 'Allow'
//           direction: 'Inbound'
//           destinationPortRange: '22'
//           protocol: 'Tcp'
//           sourceAddressPrefix: '*'
//           sourcePortRange: '*'
//           destinationAddressPrefix: '*'
//         }
//       }
//       {
//         name: 'default-allow-80'
//         properties: {
//           priority: 1001
//           access: 'Allow'
//           direction: 'Inbound'
//           destinationPortRange: '80'
//           protocol: 'Tcp'
//           sourceAddressPrefix: '*'
//           sourcePortRange: '*'
//           destinationAddressPrefix: '*'
//         }
//       }
//     ]
//   }
// }

// resource virtualNetworkName 'Microsoft.Network/virtualNetworks@2020-05-01' = {
//   name: virtualNetworkName_var
//   location: location
//   properties: {
//     addressSpace: {
//       addressPrefixes: [
//         addressPrefix
//       ]
//     }
//     subnets: [
//       {
//         name: subnetName
//         properties: {
//           addressPrefix: subnetPrefix
//           networkSecurityGroup: {
//             id: networkSecurityGroupName.id
//           }
//         }
//       }
//     ]
//   }
// }

// resource nicName 'Microsoft.Network/networkInterfaces@2020-05-01' = {
//   name: nicName_var
//   location: location
//   properties: {
//     ipConfigurations: [
//       {
//         name: 'ipconfig1'
//         properties: {
//           privateIPAllocationMethod: 'Dynamic'
//           publicIPAddress: {
//             id: publicIPAddressName.id
//           }
//           subnet: {
//             id: subnetRef
//           }
//         }
//       }
//     ]
//   }
//   dependsOn: [
//     virtualNetworkName
//   ]
// }

// resource vmName 'Microsoft.Compute/virtualMachines@2020-06-01' = {
//   name: vmName_var
//   location: location
//   properties: {
//     hardwareProfile: {
//       vmSize: vmSize
//     }
//     osProfile: {
//       computerName: vmName_var
//       adminUsername: adminUsername
//       adminPassword: adminPasswordOrKey
//       linuxConfiguration: ((authenticationType == 'password') ? json('null') : linuxConfiguration)
//     }
//     storageProfile: {
//       imageReference: {
//         publisher: imagePublisher
//         offer: imageOffer
//         sku: ubuntuOSVersion
//         version: 'latest'
//       }
//       osDisk: {
//         name: '${vmName_var}_OSDisk'
//         caching: 'ReadWrite'
//         createOption: 'FromImage'
//       }
//     }
//     networkProfile: {
//       networkInterfaces: [
//         {
//           id: nicName.id
//         }
//       ]
//     }
//   }
//   dependsOn: [
//     newStorageAccountName_resource
//   ]
// }

// resource vmName_install_apache 'Microsoft.Compute/virtualMachines/extensions@2020-06-01' = {
//   parent: vmName
//   name: 'install_apache'
//   location: location
//   properties: {
//     publisher: 'Microsoft.Azure.Extensions'
//     type: 'CustomScript'
//     typeHandlerVersion: '2.1'
//     autoUpgradeMinorVersion: true
//     settings: {
//       skipDos2Unix: false
//       fileUris: [
//         'https://gist.githubusercontent.com/daveRendon/72986871085786d04d0cdc2b1065355b/raw/34b2a4b5e05dc32f695c8236c89a2c62ce6213ca/install_apache.sh'
//       ]
//     }
//     protectedSettings: {
//       commandToExecute: 'sh install_apache.sh'
//     }
//   }
// }
